--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     		<version>1.4.5</version>
 		</dependency>
 		<dependency>
-    		<groupId>de.biomedical-imaging.ij</groupId>
-    		<artifactId>shapefilter</artifactId>
-    		<version>1.4.0</version>
+			<groupId>de.biomedical_imaging.ij</groupId>
+			<artifactId>shapefilter</artifactId>
+			<version>1.4.0</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>de.biomedical_imaging.ij</groupId>
+			<artifactId>WatershedEllipse</artifactId>
+			<version>0.3.3</version>
+		</dependency>
+ 	</dependencies>
 	<developers>
 		<developer>
 			<id>twagner</id>
