--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,10 +2,13 @@
 # Author: Thorsten Wagner
 # Version: 1.6
 
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Ultimate Points Diameter", de.biomedical_imaging.ij.shapefilter.ndef.UltimatePointsDiameter_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Register Image to ShapeFilter", de.biomedical_imaging.ij.shapefilter.ndef.RegisterImageToShapeFilter_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Agglomerate Manager", de.biomedical_imaging.ij.shapefilter.ndef.AgglomerateManager_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Replace Distribution in Results Table", de.biomedical_imaging.ij.shapefilter.ndef.DistributionWithR_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Greyscale Characteristcs", de.biomedical_imaging.ij.shapefilter.ndef.GreyscaleCharacteristicsToResultsTable_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Remove Blobs", de.biomedical_imaging.ij.shapefilter.ndef.BlobRemover_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Show as overlay", de.biomedical_imaging.ij.shapefilter.ndef.ShowAsOverlay_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Ultimate Points Diameter", de.biomedical_imaging.ij.ndef.ext.UltimatePointsDiameter_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Register Image to ShapeFilter", de.biomedical_imaging.ij.ndef.ext.RegisterImageToShapeFilter_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Agglomerate Manager", de.biomedical_imaging.ij.ndef.ext.AgglomerateManager_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Replace Distribution in Results Table", de.biomedical_imaging.ij.ndef.ext.DistributionWithR_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Greyscale Characteristcs", de.biomedical_imaging.ij.ndef.ext.GreyscaleCharacteristicsToResultsTable_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Remove Blobs", de.biomedical_imaging.ij.ndef.ext.BlobRemover_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Show Blobs as overlay", de.biomedical_imaging.ij.ndef.ext.ShowBlobsAsOverlay_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Show Ellipses as overlay", de.biomedical_imaging.ij.ndef.ext.ShowEllipsesAsOverlay_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Results table to image", de.biomedical_imaging.ij.ndef.ext.ResultsTableToImage_
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Disable auto focus", de.biomedical_imaging.ij.ndef.ext.Disable_Auto_Focus
