--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -4,6 +4,7 @@
 
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Ultimate Points Diameter", de.biomedical_imaging.ij.ndef.ext.UltimatePointsDiameter_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Register Image to ShapeFilter", de.biomedical_imaging.ij.ndef.ext.RegisterImageToShapeFilter_
+Analyze>NDEF-EXT, "Register Image to EllipseSplit", de.biomedical_imaging.ij.ndef.ext.RegisterImageToEllipseFitting_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Agglomerate Manager", de.biomedical_imaging.ij.ndef.ext.AgglomerateManager_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Replace Distribution in Results Table", de.biomedical_imaging.ij.ndef.ext.DistributionWithR_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Greyscale Characteristcs", de.biomedical_imaging.ij.ndef.ext.GreyscaleCharacteristicsToResultsTable_
@@ -11,4 +12,6 @@ Analyze>NDEF-EXT>Shape-Filter-Extension, "Remove Blobs", de.biomedical_imaging.i
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Show Blobs as overlay", de.biomedical_imaging.ij.ndef.ext.ShowBlobsAsOverlay_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Show Ellipses as overlay", de.biomedical_imaging.ij.ndef.ext.ShowEllipsesAsOverlay_
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Results table to image", de.biomedical_imaging.ij.ndef.ext.ResultsTableToImage_
-Analyze>NDEF-EXT>Shape-Filter-Extension, "Disable auto focus", de.biomedical_imaging.ij.ndef.ext.Disable_Auto_Focus
+Analyze>NDEF-EXT>Shape-Filter-Extension, "Blob contour data as image", de.biomedical_imaging.ij.ndef.ext.BlobContoursDataAsImage_
+Analyze>NDEF-EXT, "Ellipse contour data as image", de.biomedical_imaging.ij.ndef.ext.EllipseContoursDataAsImage_
+Analyze>NDEF-EXT, "Export CMF", de.biomedical_imaging.ij.ndef.ext.ExportCMF_
