Bug fix results table edit, release 1.2.2

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -15,3 +15,4 @@ Analyze>NDEF-EXT>Shape-Filter-Extension, "Results table to image", de.biomedical
 Analyze>NDEF-EXT>Shape-Filter-Extension, "Blob contour data as image", de.biomedical_imaging.ij.ndef.ext.BlobContoursDataAsImage_
 Analyze>NDEF-EXT, "Ellipse contour data as image", de.biomedical_imaging.ij.ndef.ext.EllipseContoursDataAsImage_
 Analyze>NDEF-EXT, "Export CMF", de.biomedical_imaging.ij.ndef.ext.ExportCMF_
+Analyze>NDEF-EXT, "Is global calibration", de.biomedical_imaging.ij.ndef.ext.IsGlobalCalibration_
