--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,19 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<connection>scm:git:git://github.com/thorstenwagner/ij-shape-filter.git</connection>
 		<developerConnection>scm:git:git@github.com:thorstenwagner/ij-shape-filter.git</developerConnection>
    </scm>
+   
+   	<build>
+		<plugins>
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        </plugins>
+     </build>
 
 </project>
